manifests/02_nginx-ingress/ingress-rule.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: demo.invaliddomain.de
  annotations:
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: 'true'
spec:
  tls:
  - hosts:
    - dev.metakube.io
    secretName: tls-secret
  rules:
  - host: demo.invaliddomain.de
    http:
      paths:
      - path: /
        backend:
          serviceName: webapp-svc
          servicePort: http
